# chadrick-kwag.github.io

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: hugo.yaml
docs/: blog-taxonomy-guidelines.md  recovery-report.md
docs/superpowers/plans/: 2026-06-20-hugo-s3-recovery.md
docs/superpowers/specs/: 2026-06-20-hugo-s3-recovery-design.md
site/: go.mod  hugo.yaml
site/content/: _index.md  search.md
site/content/posts/accessing-nvidia-gpu-info-from-python/: index.md
site/content/posts/add-custom-domain-resolution-in-linuxcoult-not-resolve-hostname-error-fix/: index.md
site/content/posts/add-git-branch-indicator-in-bash-prompt/: index.md
site/content/posts/add-tokens-to-huggingface-tokenizer/: index.md
site/content/posts/adding-adsense-and-google-analytics-to-hugo/: index.md
site/content/posts/adding-custom-tf-keras-metric/: index.md
site/content/posts/adding-new-kernel-to-jupyter/: index.md
site/content/posts/adding-pip-config-file-in-virtualenv/: index.md
site/content/posts/adding-proxy-to-webpack-dev-server-to-separate-backend-api-server/: index.md
site/content/posts/agglomerativeclustering-by-distance-example/: index.md
site/layouts/_default/: baseof.html  rss.xml
site/layouts/partials/: post_meta.html
tests/: test_cli.py  test_inventory.py  test_io.py  test_markdown.py  test_parser.py  test_pipeline.py  test_site_scaffold.py  test_validate.py  test_writer.py
tests/fixtures/: article.html
tools/recover/: __main__.py  inventory.py  io.py  markdown.py  model.py  parser.py  pipeline.py  validate.py  writer.py
(+212 files in other folders)
