[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[project]
name = "chadrick-blog-recovery"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4==4.15.0",
  "markdown-it-py==4.0.0",
  "markdownify==1.2.2",
  "PyYAML==6.0.3",
]

[project.optional-dependencies]
test = ["pytest==9.1.1"]

[tool.setuptools.packages.find]
include = ["tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
